# zx81-emulator

./: .gitignore  Cargo.toml  DOCUMENTATION.md  LICENSE  README.md  opcode-todo.txt  run_tests.sh
p_tapes/: artist.p  asteroids.p  bomber.p  code.p  guillotine.p  kaleidescope.p  klingons.p  simon.p  ufo.p
src/: cpu.rs  emulator.rs  lib.rs  main.rs  memory.rs
src/cpu/: cb_instructions.rs  dd_instructions.rs  ed_instructions.rs  fd_instructions.rs  instructions.rs  mod.rs  registers.rs
src/io/: keyboard.rs  mod.rs  tape.rs
src/memory/: mod.rs  ram.rs  rom.rs  tape.rs
src/platform/: audio.rs  minifb.rs  mod.rs
src/tape/: mod.rs
src/video/: character_set.rs  display_file.rs  mod.rs  renderer.rs
test_roms/: 01_nop_halt.rom  02_load_immediate.rom  03_increment.rom  04_decrement.rom  05_16bit_ops.rom  06_jump.rom  07_djnz_loop.rom  08_ld_r_r.rom  09_ld_memory.rom  10_add.rom  10_ld_hl_n.rom  11_sub.rom  12_adc.rom  13_sbc.rom  14_and.rom  15_or.rom  16_xor.rom  17_cp.rom  18_logical_memory.rom  19_ld_bc_de_indirect.rom  20_ld_nn_direct.rom  21_ld_hl_memory.rom  22_di_ei.rom  23_push_pop.rom  24_call_ret.rom  25_conditional_call.rom  26_rst.rom  27_immediate_arithmetic.rom  28_add_hl_16bit.rom  29_exchange_instructions.rom  make_test_rom.py
